# crucible

./: .gitignore  CLAUDE.md  Cargo.toml  pyproject.toml
agents/analyzer/: agent.py  tools.py
agents/common/: agent_base.py  claude_agent.py  guest_rpc.py  protocol.py  tool_registry.py
agents/echo/: agent.py
agents/game_selector/: agent.py  tools.py
agents/optimizer/: agent.py  tools.py
agents/patch_reviewer/: agent.py
agents/profiler/: __init__.py  agent.py  game_tools.py  tools.py
config/: crucible.toml
crates/crucible-common/: Cargo.toml
crates/crucible-common/src/: lib.rs  metrics.rs  protocol.rs
crates/crucible-orchestrator/: Cargo.toml
crates/crucible-orchestrator/src/: agent_runner.rs  config.rs  db.rs  deck.rs  evaluator.rs  kernel_builder.rs  lib.rs  main.rs  orchestrator.rs  state_machine.rs  vm.rs  vsock_client.rs
crates/crucible-orchestrator/tests/: e2e.rs  integration_test.rs
docs/: steam-deck-lane.md  winner-validation.md
docs/superpowers/plans/: 2026-04-18-crucible-foundation.md  2026-04-19-crucible-core-agents.md  2026-04-19-crucible-orchestration-loop.md  (+3 more)
guest/: crucible-guest-agent.service  crucible_guest_agent.py  protocol.py  setup_cgroups.sh
patches/: README.md  SUMMARY.md
patches/candidates/: README.md  patchctl
patches/evidence/: CPUIDLE-FINDINGS.md  EEVDF-RUNQ-FINDINGS.md  HOGWARTS-FINDINGS.md  TRACE-FINDINGS.md  VKMARK-FINDINGS.md  civ6-lockcon-20260716.txt
patches/negative-results/: drm-sched-wq-highpri-neptune.diff  sched-fair-sis-util-idle-floor-neptune.diff
scripts/: setup-game-rootfs.sh  setup-host.sh  setup-rootfs.sh  setup-steam-rootfs.sh
scripts/lib/: rootfs-common.sh
skills/: README.md
skills/architecture/: design.md
skills/discovery/: profiling.md
skills/validation/: adversarial-review.md
testbed/: README.md
testbed/deck/: bench-ntsync.c  bisect-3303.sh  civ6-stats.py  cpu-bench-interleaved.sh  deck-slot-b.sh  eevdf-grind.sh  forkstorm-test.sh  lavd-ab-stats.py  lavd-ab.sh  ntsync-ab.sh  off8-experiment.sh  replicate-cachenice.sh  repro-3119.sh  schbench-stats.py
testbed/virt/: setup-game-rootfs.sh  setup-host.sh  setup-rootfs.sh  setup-steam-rootfs.sh
tests/python/: test_agent_base.py  test_analyzer.py  test_claude_agent.py  test_game_selector.py  test_guest_agent.py  test_guest_game_handlers.py  test_guest_rpc.py  test_optimizer.py  test_patch_reviewer.py  test_profiler.py  test_profiler_game_tools.py  test_protocol.py  test_run_benchmark_tool.py  test_tool_registry.py
(+190 files in other folders)
