[package]
name = "crucible-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
crucible-common = { path = "../crucible-common" }
tokio = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio-vsock = { workspace = true }
statrs = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
